style.css
body {
    max-width: 1000px;
    width: 100%;
}

#preview,
textarea {
    width: 90%;
    height: 100%;
    min-height: 250px;
    max-height: 250px;
    resize: none;
    font-family: Arial, Helvetica, sans-serif;
    font-size: small;
    overflow: auto;
}

#preview {
    border: 1px solid black;
    padding: 2px;
    border-radius: 2px;
}

select {
    width: 90%;
}

.preview-text {
    font-style: italic;
    color: dodgerblue;
}

